# doc-scanner

./: CMakeLists.txt  README.md  manifest.json.in
app/: CMakeLists.txt  Main.qml  doc-scanner.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/doc-scanner/tests/: __init__.py  test_main.py
app/ui/: EmptyDocument.qml  FileOpener.qml  ImportPage.qml
backend/: CMakeLists.txt
backend/lib/: libopencv_core.so.3.1.0  libopencv_features2d.so.3.1.0  libopencv_flann.so.3.1.0  libopencv_imgcodecs.so.3.1.0  libopencv_imgproc.so.3.1.0  libopencv_ml.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_photo.so.3.1.0  libopencv_shape.so.3.1.0  libopencv_superres.so.3.1.0  libopencv_videostab.so.3.1.0
backend/modules/Doc_Scanner/: backend.cpp  backend.h  imagewarp.cpp  imagewarp.h  pointvectorutils.cpp  pointvectorutils.h  qmldir  scanimage.cpp  scanimage.h
backend/modules/Doc_Scanner/lib/: libopencv_calib3d.so.3.1.0  libopencv_highgui.so.3.1.0  libopencv_stitching.so.3.1.0  libopencv_video.so.3.1.0  libopencv_videoio.so.3.1.0
backend/modules/Doc_Scanner/lib/pkgconfig/: opencv.pc
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: doc-scanner.dslul.pot
